align-fixes

--- a/common/common.scss
+++ b/common/common.scss
@@ -516,11 +516,9 @@ border-bottom: 0 !important;
    border-spacing: 0 0.25em;
    display: contents;
    .topic-list-header {
-     tr {
-      width: 100%;
-      display: table;
-       border-bottom: none;
-     }
+    width: 100%;
+    display: table;
+     border-bottom: none;
    }
    .topic-list-body {
      display: contents;
@@ -585,18 +583,6 @@ border-bottom: 0 !important;
 
 .sidebar-section-message {
 display: none;
- }
- 
- .full-width .contents .topic-list .topic-list-item .posters a.latest {
-   margin-right: 4px;
-   width: 100%;
-   height: 100%;
-   justify-content: center;
-   align-content: center;
-   align-items: center;
-   .avatar {
-     margin-right: 0;
-   }
  }
  
  .full-width .contents .topic-list {
@@ -713,7 +699,7 @@ display: none;
  /* Matenauta stuff */
 
  a.topic-excerpt {
-display: none;
+display: none !important;
  }
  .d-user-card__custom-fields {
 font-size: var(--font-0)
@@ -926,7 +912,7 @@ font-size: 1.11rem;
 display: none !important;
 }
 .topic-list .posters {
-width: 250px;
+width: 250px !important;
 }
 .main-link .topic-list-data {
 width: 100%;
@@ -1072,9 +1058,8 @@ font-size: inherit;
 margin-bottom: 3rem;
 }
 
-.full-width .contents .topic-list .topic-list-body .topic-list-item .topic-list-data.age,
-.full-width .contents .topic-list .topic-list-body .topic-list-item .topic-list-data.posts  {
-  display: table-cell !important;
+.full-width .contents .topic-list .topic-list-body .topic-list-item {
+display: table;
 }
 
 
